--- a/src/index.css
+++ b/src/index.css
@@ -125,3 +125,26 @@ input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
   box-shadow: inset 0 0 20px 20px #23232329;
 }
+
+.loader {
+  width: 15px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 3px solid #000;
+  border-right-color: transparent;
+  animation: load 1s infinite linear;
+}
+@keyframes load {
+  to {
+    transform: rotate(1turn);
+  }
+}
+button {
+  margin: 10px auto;
+}
+
+@keyframes loadingspin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
